
[TestDetermineInstallCmd_Snapshot/pdm-none - 1]
RUN pip install pdm
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-fastapi - 1]
RUN pip install pdm
RUN pdm add uvicorn
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-static-django - 1]
RUN pip install pdm
RUN pdm add gunicorn
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-static-nginx - 1]
RUN pip install pdm
RUN pdm add gunicorn
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-static-nginx-django - 1]
RUN pip install pdm
RUN pdm add gunicorn
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-streamlit-entry - 1]
RUN pip install pdm
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-tornado - 1]
RUN pip install pdm
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pdm-with-wsgi - 1]
RUN pip install pdm
RUN pdm add gunicorn
RUN pdm install
---

[TestDetermineInstallCmd_Snapshot/pip-none - 1]
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-fastapi - 1]
RUN pip install uvicorn
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-static-django - 1]
RUN pip install gunicorn
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-static-nginx - 1]
RUN pip install gunicorn
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-static-nginx-django - 1]
RUN pip install gunicorn
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-streamlit-entry - 1]
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-tornado - 1]
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pip-with-wsgi - 1]
RUN pip install gunicorn
RUN sed '/-e/d' requirements.txt | pip install -r /dev/stdin
---

[TestDetermineInstallCmd_Snapshot/pipenv-none - 1]
RUN pip install pipenv
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-fastapi - 1]
RUN pip install pipenv
RUN pipenv install uvicorn
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-static-django - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-static-nginx - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-static-nginx-django - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-streamlit-entry - 1]
RUN pip install pipenv
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-tornado - 1]
RUN pip install pipenv
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/pipenv-with-wsgi - 1]
RUN pip install pipenv
RUN pipenv install gunicorn
RUN pipenv install
---

[TestDetermineInstallCmd_Snapshot/poetry-none - 1]
RUN pip install poetry
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-fastapi - 1]
RUN pip install poetry
RUN poetry add uvicorn
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-static-django - 1]
RUN pip install poetry
RUN poetry add gunicorn
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-static-nginx - 1]
RUN pip install poetry
RUN poetry add gunicorn
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-static-nginx-django - 1]
RUN pip install poetry
RUN poetry add gunicorn
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-streamlit-entry - 1]
RUN pip install poetry
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-tornado - 1]
RUN pip install poetry
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/poetry-with-wsgi - 1]
RUN pip install poetry
RUN poetry add gunicorn
RUN poetry install
---

[TestDetermineInstallCmd_Snapshot/unknown-none - 1]
RUN echo "skip install"
---

[TestDetermineInstallCmd_Snapshot/unknown-with-fastapi - 1]
RUN pip install uvicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-with-static-django - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-with-static-nginx - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-with-static-nginx-django - 1]
RUN pip install gunicorn
---

[TestDetermineInstallCmd_Snapshot/unknown-with-streamlit-entry - 1]
RUN echo "skip install"
---

[TestDetermineInstallCmd_Snapshot/unknown-with-tornado - 1]
RUN echo "skip install"
---

[TestDetermineInstallCmd_Snapshot/unknown-with-wsgi - 1]
RUN pip install gunicorn
---

[TestDetermineStartCmd_Snapshot/pip-none - 1]
_startup() { python app.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/pip-with-fastapi - 1]
_startup() { uvicorn wsgi.py --host 0.0.0.0 --port 8080; }; _startup
---

[TestDetermineStartCmd_Snapshot/pip-with-static - 1]
_startup() { /usr/sbin/nginx && gunicorn --bind :8000 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/pip-with-wsgi - 1]
_startup() { gunicorn --bind :8080 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/pipenv-none - 1]
_startup() { pipenv run python app.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/pipenv-with-fastapi - 1]
_startup() { pipenv run uvicorn wsgi.py --host 0.0.0.0 --port 8080; }; _startup
---

[TestDetermineStartCmd_Snapshot/pipenv-with-static - 1]
_startup() { /usr/sbin/nginx && pipenv run gunicorn --bind :8000 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/pipenv-with-wsgi - 1]
_startup() { pipenv run gunicorn --bind :8080 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/poetry-none - 1]
_startup() { poetry run python app.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/poetry-with-fastapi - 1]
_startup() { poetry run uvicorn wsgi.py --host 0.0.0.0 --port 8080; }; _startup
---

[TestDetermineStartCmd_Snapshot/poetry-with-static - 1]
_startup() { /usr/sbin/nginx && poetry run gunicorn --bind :8000 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/poetry-with-wsgi - 1]
_startup() { poetry run gunicorn --bind :8080 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/unknown-none - 1]
_startup() { python app.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/unknown-with-fastapi - 1]
_startup() { uvicorn wsgi.py --host 0.0.0.0 --port 8080; }; _startup
---

[TestDetermineStartCmd_Snapshot/unknown-with-static - 1]
_startup() { /usr/sbin/nginx && gunicorn --bind :8000 wsgi.py; }; _startup
---

[TestDetermineStartCmd_Snapshot/unknown-with-wsgi - 1]
_startup() { gunicorn --bind :8080 wsgi.py; }; _startup
---
